# fluxpy

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
documentation_builder/: Makefile  conf.py  getting_started.ipynb  index.rst  make.bat  requirements.txt
ext_data/media/: test_medium.json
ext_data/models/: Acaricomes_phytoseiuli_DSM_14247.xml  escher.val
ext_data/styles/: seed2mnx.json
fluxpy/: __init__.py  constants.py
fluxpy/illustrations/: __init__.py  illustrations.py  style_qfca.json
fluxpy/stats/: __init__.py  extract_stats_from_solution.py
fluxpy/utils/: __init__.py  format.py  utils.py
notebooks/: cobra_features.ipynb
src/fluxpy/: __init__.py  auto_decorator.py  constants.py  decorators.py
src/fluxpy/data/: README.md
src/fluxpy/illustrations/: __init__.py  build_escher_map.py  illustrations.py  style_qfca.json
src/fluxpy/mappings/: kegg_pairs.py
src/fluxpy/stats/: extract_stats_from_solution.py
src/fluxpy/utils/: __init__.py  analysis.py  model.py  utils.py
tests/: utils.py
tests/test_utils/: test_analysis.py  test_model.py  test_utils.py
