[tool.poetry]
name = "fluxpy"
version = "0.1.0"
description = "A toolbox with utilities for metabolic modelling analysis"
authors = ["Haris Zafeiropoulos <haris.zafeiropoulos@kuleuven.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cobra = "^0.29.0"
mergem = "^1.1.0"
plotly = "^5.22.0"
seaborn = "^0.13.2"
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
