[tool.poetry]
name = "fluxpy"
version = "0.1.0"
description = "A toolbox with utilities for metabolic modelling analysis"
authors = ["Haris Zafeiropoulos <haris.zafeiropoulos@kuleuven.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
plotly = "^5.22.0"
seaborn = "^0.13.2"
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.13.0"
mergem = "v1.1.0"
cobra = "0.29.0"
networkx = "2.8.8"
dash = "^2.17.0"
dash-cytoscape = "^1.0.1"
nbsphinx = "^0.9.4"
furo = "^2024.5.6"
sphinx-autoapi = "^3.1.2"
ndex2 = "^3.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
